[metadata]
name = my_app
description = Python Halloween Special 2021!!
author = Jacob J Callahan
author_email = jacob.callahan05@gmail.com
url = https://github.com/jacobcallahan/understanding
keywords = python, pytest, halloween
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Gamers lul
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    pytest
packages = find:
zip_safe = False
